--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 <h2>Other:</h2>
 <ul>
     <li>
-        <a href="/hobbies.html">My Hobbies</a>
+        <a href="hobbies.html">My Hobbies</a>
     </li>
     <li>
-        <a href="/contact.html">Contact Me</a>
+        <a href="contact.html">Contact Me</a>
     </li>
 </ul>
 <footer>
